--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: flutter_typeahead
 version: 4.7.0
+publish_to: none
 
 description: A highly customizable typeahead (autocomplete) text input field for Flutter
 homepage: https://github.com/AbdulRahmanAlHamali/flutter_typeahead
@@ -7,7 +8,10 @@ homepage: https://github.com/AbdulRahmanAlHamali/flutter_typeahead
 dependencies:
   flutter:
     sdk: flutter
-  flutter_keyboard_visibility: ^5.4.1
+  flutter_keyboard_visibility:
+    git: 
+      url: https://github.com/kumsumit/flutter_keyboard_visibility.git
+      path: flutter_keyboard_visibility
   pointer_interceptor: ^0.9.3+6
 
 dev_dependencies:
